@@ -7,6 +7,7 @@
 	- removes btt specific test and related btt tests tools
 	- removes btt support from pmemspoil
 	- removes btt support from pmempool
+	- removes btt support from pmemwrite
 	- ...
 
 Wed May 31 2023 Oksana Sałyk <oksana.salyk@intel.com>
